--- a/website/static/output.css
+++ b/website/static/output.css
@@ -1,4 +1,4 @@
-/*! tailwindcss v4.1.16 | MIT License | https://tailwindcss.com */
+/*! tailwindcss v4.1.17 | MIT License | https://tailwindcss.com */
 @layer properties;
 @layer theme, base, components, utilities;
 @layer theme {
@@ -7,9 +7,6 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-red-300: oklch(80.8% 0.114 19.571);
-    --color-red-400: oklch(70.4% 0.191 22.216);
-    --color-red-600: oklch(57.7% 0.245 27.325);
     --color-red-700: oklch(50.5% 0.213 27.518);
     --color-red-800: oklch(44.4% 0.177 26.899);
     --color-green-800: oklch(44.8% 0.119 151.328);
@@ -33,7 +30,6 @@
     --text-3xl--line-height: calc(2.25 / 1.875);
     --font-weight-medium: 500;
     --font-weight-semibold: 600;
-    --radius-md: 0.375rem;
     --radius-lg: 0.5rem;
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
@@ -209,11 +205,17 @@
   .left-0 {
     left: calc(var(--spacing) * 0);
   }
+  .col-\[1\/-1\] {
+    grid-column: 1/-1;
+  }
   .mx-auto {
     margin-inline: auto;
   }
   .mt-1 {
     margin-top: calc(var(--spacing) * 1);
+  }
+  .mt-2 {
+    margin-top: calc(var(--spacing) * 2);
   }
   .mt-10 {
     margin-top: calc(var(--spacing) * 10);
@@ -233,9 +235,6 @@
   .table {
     display: table;
   }
-  .h-4 {
-    height: calc(var(--spacing) * 4);
-  }
   .h-5 {
     height: calc(var(--spacing) * 5);
   }
@@ -253,9 +252,6 @@
   }
   .w-1\/2 {
     width: calc(1/2 * 100%);
-  }
-  .w-4 {
-    width: calc(var(--spacing) * 4);
   }
   .w-5 {
     width: calc(var(--spacing) * 5);
@@ -278,14 +274,20 @@
   .flex-shrink-0 {
     flex-shrink: 0;
   }
+  .grid-cols-\[20\%_repeat\(3\,1fr\)\] {
+    grid-template-columns: 20% repeat(3,1fr);
+  }
   .grid-cols-\[150px_1fr\] {
     grid-template-columns: 150px 1fr;
   }
   .grid-cols-\[300px_repeat\(2\,minmax\(350px\,1fr\)\)_150px\] {
     grid-template-columns: 300px repeat(2,minmax(350px,1fr)) 150px;
   }
-  .grid-cols-\[repeat\(3\,1fr\)\] {
-    grid-template-columns: repeat(3,1fr);
+  .grid-cols-\[repeat\(2\,1fr\)\] {
+    grid-template-columns: repeat(2,1fr);
+  }
+  .grid-cols-subgrid {
+    grid-template-columns: subgrid;
   }
   .flex-col {
     flex-direction: column;
@@ -311,6 +313,9 @@
   .gap-y-1 {
     row-gap: calc(var(--spacing) * 1);
   }
+  .gap-y-2 {
+    row-gap: calc(var(--spacing) * 2);
+  }
   .gap-y-4 {
     row-gap: calc(var(--spacing) * 4);
   }
@@ -334,9 +339,13 @@
     border-top-style: var(--tw-border-style);
     border-top-width: 1px;
   }
-  .border-l {
-    border-left-style: var(--tw-border-style);
-    border-left-width: 1px;
+  .border-r {
+    border-right-style: var(--tw-border-style);
+    border-right-width: 1px;
+  }
+  .border-b {
+    border-bottom-style: var(--tw-border-style);
+    border-bottom-width: 1px;
   }
   .border-gray-200 {
     border-color: var(--color-gray-200);
@@ -359,12 +368,6 @@
       background-color: color-mix(in oklab, var(--color-red-700) 20%, transparent);
     }
   }
-  .bg-red-700\/30 {
-    background-color: color-mix(in srgb, oklch(50.5% 0.213 27.518) 30%, transparent);
-    @supports (color: color-mix(in lab, red, red)) {
-      background-color: color-mix(in oklab, var(--color-red-700) 30%, transparent);
-    }
-  }
   .p-0\.5 {
     padding: calc(var(--spacing) * 0.5);
   }
@@ -385,9 +388,6 @@
   }
   .pl-4 {
     padding-left: calc(var(--spacing) * 4);
-  }
-  .text-center {
-    text-align: center;
   }
   .text-2xl {
     font-size: var(--text-2xl);
