--- a/website/static/output.css
+++ b/website/static/output.css
@@ -241,11 +241,20 @@
   .h-10 {
     height: calc(var(--spacing) * 10);
   }
+  .h-14 {
+    height: calc(var(--spacing) * 14);
+  }
+  .h-20 {
+    height: calc(var(--spacing) * 20);
+  }
   .h-\[1em\] {
     height: 1em;
   }
   .h-full {
     height: 100%;
+  }
+  .min-h-14 {
+    min-height: calc(var(--spacing) * 14);
   }
   .min-h-screen {
     min-height: 100vh;
