--- a/website/input.css
+++ b/website/input.css
@@ -17,3 +17,16 @@
         transparent 2px 8px
     );
 }
+
+#hoverable {
+    @apply relative;
+}
+
+#hoverable:hover #floating {
+    @apply flex;
+}
+
+#floating {
+    @apply hidden absolute w-fit px-4 py-2 -top-2 -translate-y-full left-1/2 -translate-x-1/2
+        bg-white border border-gray-200 rounded-lg text-sm text-nowrap text-gray-800;
+}
