--- a/website/static/output.css
+++ b/website/static/output.css
@@ -8,7 +8,6 @@
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
     --color-red-100: oklch(93.6% 0.032 17.717);
-    --color-red-200: oklch(88.5% 0.062 18.334);
     --color-red-700: oklch(50.5% 0.213 27.518);
     --color-red-800: oklch(44.4% 0.177 26.899);
     --color-green-800: oklch(44.8% 0.119 151.328);
@@ -16,6 +15,7 @@
     --color-gray-100: oklch(96.7% 0.003 264.542);
     --color-gray-200: oklch(92.8% 0.006 264.531);
     --color-gray-300: oklch(87.2% 0.01 258.338);
+    --color-gray-400: oklch(70.7% 0.022 261.325);
     --color-gray-500: oklch(55.1% 0.027 264.364);
     --color-gray-600: oklch(44.6% 0.03 256.802);
     --color-gray-700: oklch(37.3% 0.034 259.733);
@@ -208,9 +208,6 @@
   .left-0 {
     left: calc(var(--spacing) * 0);
   }
-  .col-\[1\/-1\] {
-    grid-column: 1/-1;
-  }
   .col-\[1\/2\] {
     grid-column: 1/2;
   }
@@ -219,24 +216,6 @@
   }
   .col-\[2\/-1\] {
     grid-column: 2/-1;
-  }
-  .container {
-    width: 100%;
-    @media (width >= 40rem) {
-      max-width: 40rem;
-    }
-    @media (width >= 48rem) {
-      max-width: 48rem;
-    }
-    @media (width >= 64rem) {
-      max-width: 64rem;
-    }
-    @media (width >= 80rem) {
-      max-width: 80rem;
-    }
-    @media (width >= 96rem) {
-      max-width: 96rem;
-    }
   }
   .-mx-2 {
     margin-inline: calc(var(--spacing) * -2);
@@ -327,23 +306,11 @@
     --tw-translate-y: calc(calc(1/3 * 100%) * -1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
-  .grid-cols-\[2fr_2fr_1fr_1fr_1fr\] {
-    grid-template-columns: 2fr 2fr 1fr 1fr 1fr;
-  }
-  .grid-cols-\[20\%_20\%_1fr\] {
-    grid-template-columns: 20% 20% 1fr;
-  }
-  .grid-cols-\[20\%_20\%_1fr_1fr_1fr\] {
-    grid-template-columns: 20% 20% 1fr 1fr 1fr;
-  }
   .grid-cols-\[20\%_20\%_1fr_auto\] {
     grid-template-columns: 20% 20% 1fr auto;
   }
   .grid-cols-\[20\%_20\%_2fr_1fr_1fr\] {
     grid-template-columns: 20% 20% 2fr 1fr 1fr;
-  }
-  .grid-cols-\[20\%_repeat\(3\,1fr\)\] {
-    grid-template-columns: 20% repeat(3,1fr);
   }
   .grid-cols-\[150px_1fr\] {
     grid-template-columns: 150px 1fr;
@@ -353,12 +320,6 @@
   }
   .grid-cols-\[repeat\(2\,1fr\)\] {
     grid-template-columns: repeat(2,1fr);
-  }
-  .grid-cols-\[repeat\(5\,1fr\)\] {
-    grid-template-columns: repeat(5,1fr);
-  }
-  .grid-cols-subgrid {
-    grid-template-columns: subgrid;
   }
   .flex-col {
     flex-direction: column;
@@ -390,12 +351,6 @@
   .gap-y-4 {
     row-gap: calc(var(--spacing) * 4);
   }
-  .self-center {
-    align-self: center;
-  }
-  .justify-self-center {
-    justify-self: center;
-  }
   .overflow-hidden {
     overflow: hidden;
   }
@@ -420,10 +375,6 @@
     border-right-style: var(--tw-border-style);
     border-right-width: 1px;
   }
-  .border-b {
-    border-bottom-style: var(--tw-border-style);
-    border-bottom-width: 1px;
-  }
   .border-gray-200 {
     border-color: var(--color-gray-200);
   }
@@ -441,9 +392,6 @@
   }
   .bg-red-100 {
     background-color: var(--color-red-100);
-  }
-  .bg-red-200 {
-    background-color: var(--color-red-200);
   }
   .bg-red-700\/20 {
     background-color: color-mix(in srgb, oklch(50.5% 0.213 27.518) 20%, transparent);
@@ -472,17 +420,11 @@
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
   }
-  .py-4 {
-    padding-block: calc(var(--spacing) * 4);
-  }
   .py-10 {
     padding-block: calc(var(--spacing) * 10);
   }
   .pl-4 {
     padding-left: calc(var(--spacing) * 4);
-  }
-  .text-center {
-    text-align: center;
   }
   .text-2xl {
     font-size: var(--text-2xl);
@@ -526,14 +468,14 @@
   .text-green-800 {
     color: var(--color-green-800);
   }
-  .text-red-200 {
-    color: var(--color-red-200);
-  }
   .text-red-700 {
     color: var(--color-red-700);
   }
   .text-red-800 {
     color: var(--color-red-800);
+  }
+  .decoration-gray-400 {
+    text-decoration-color: var(--color-gray-400);
   }
   .opacity-0 {
     opacity: 0%;
@@ -581,6 +523,10 @@
   color: var(--color-gray-800);
   --tw-shadow: 0 1px 2px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.05));
   box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+}
+#link {
+  text-decoration-line: underline;
+  text-decoration-style: dotted;
 }
 @property --tw-translate-x {
   syntax: "*";
