parser-server, ui updates

--- a/website/input.css
+++ b/website/input.css
@@ -18,19 +18,30 @@
     );
 }
 
-#hoverable {
+.hoverable {
     @apply relative;
 }
 
-#hoverable:hover #floating {
+.hoverable:hover .floating {
     @apply flex;
 }
 
-#floating {
+.floating {
     @apply hidden absolute w-fit px-4 py-2 -top-2 -translate-y-full left-1/2 -translate-x-1/2
         bg-white border border-gray-200 rounded-lg text-sm text-nowrap text-gray-800 shadow-xs;
 }
 
-#link {
+.hoverable:hover .floating-right {
+    @apply flex;
+}
+
+.floating-right {
+    @apply hidden absolute w-fit px-4 py-2
+        top-1/2 -translate-y-1/2 -right-2 translate-x-full 
+        bg-white border border-gray-200 rounded-lg
+        text-sm text-nowrap text-gray-800 shadow-xs;
+}
+
+.link {
     @apply underline decoration-dotted;
 }
