--- a/website/static/output.css
+++ b/website/static/output.css
@@ -33,7 +33,9 @@
     --text-3xl--line-height: calc(2.25 / 1.875);
     --font-weight-medium: 500;
     --font-weight-semibold: 600;
+    --radius-md: 0.375rem;
     --radius-lg: 0.5rem;
+    --animate-spin: spin 1s linear infinite;
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
   }
@@ -190,6 +192,9 @@
   .absolute {
     position: absolute;
   }
+  .fixed {
+    position: fixed;
+  }
   .relative {
     position: relative;
   }
@@ -208,6 +213,9 @@
   .left-0 {
     left: calc(var(--spacing) * 0);
   }
+  .z-50 {
+    z-index: 50;
+  }
   .col-\[1\/2\] {
     grid-column: 1/2;
   }
@@ -216,6 +224,9 @@
   }
   .col-\[2\/-1\] {
     grid-column: 2/-1;
+  }
+  .col-\[2\/3\] {
+    grid-column: 2/3;
   }
   .-mx-2 {
     margin-inline: calc(var(--spacing) * -2);
@@ -235,6 +246,9 @@
   .ml-4 {
     margin-left: calc(var(--spacing) * 4);
   }
+  .ml-\[3rem\] {
+    margin-left: 3rem;
+  }
   .block {
     display: block;
   }
@@ -246,6 +260,16 @@
   }
   .table {
     display: table;
+  }
+  .aspect-square {
+    aspect-ratio: 1 / 1;
+  }
+  .size-6 {
+    width: calc(var(--spacing) * 6);
+    height: calc(var(--spacing) * 6);
+  }
+  .h-3 {
+    height: calc(var(--spacing) * 3);
   }
   .h-4 {
     height: calc(var(--spacing) * 4);
@@ -271,6 +295,9 @@
   .w-1\/2 {
     width: calc(1/2 * 100%);
   }
+  .w-3 {
+    width: calc(var(--spacing) * 3);
+  }
   .w-4 {
     width: calc(var(--spacing) * 4);
   }
@@ -280,8 +307,17 @@
   .w-10 {
     width: calc(var(--spacing) * 10);
   }
+  .w-\[3rem\] {
+    width: 3rem;
+  }
   .w-\[80\%\] {
     width: 80%;
+  }
+  .w-\[calc\(100\%\+1rem\)\] {
+    width: calc(100% + 1rem);
+  }
+  .w-\[calc\(100\%-3rem\)\] {
+    width: calc(100% - 3rem);
   }
   .w-fit {
     width: fit-content;
@@ -305,6 +341,15 @@
   .-translate-y-1\/3 {
     --tw-translate-y: calc(calc(1/3 * 100%) * -1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .animate-spin {
+    animation: var(--animate-spin);
+  }
+  .cursor-pointer {
+    cursor: pointer;
+  }
+  .grid-cols-\[3rem_1fr\] {
+    grid-template-columns: 3rem 1fr;
   }
   .grid-cols-\[20\%_20\%_1fr_auto\] {
     grid-template-columns: 20% 20% 1fr auto;
@@ -339,6 +384,12 @@
   .gap-3 {
     gap: calc(var(--spacing) * 3);
   }
+  .gap-4 {
+    gap: calc(var(--spacing) * 4);
+  }
+  .gap-8 {
+    gap: calc(var(--spacing) * 8);
+  }
   .gap-x-1 {
     column-gap: calc(var(--spacing) * 1);
   }
@@ -363,6 +414,9 @@
   .rounded-lg {
     border-radius: var(--radius-lg);
   }
+  .rounded-md {
+    border-radius: var(--radius-md);
+  }
   .rounded-b-\[\.45rem\] {
     border-bottom-right-radius: .45rem;
     border-bottom-left-radius: .45rem;
@@ -370,6 +424,14 @@
   .border {
     border-style: var(--tw-border-style);
     border-width: 1px;
+  }
+  .border-2 {
+    border-style: var(--tw-border-style);
+    border-width: 2px;
+  }
+  .border-t {
+    border-top-style: var(--tw-border-style);
+    border-top-width: 1px;
   }
   .border-r {
     border-right-style: var(--tw-border-style);
@@ -380,6 +442,12 @@
   }
   .border-gray-300 {
     border-color: var(--color-gray-300);
+  }
+  .border-gray-600 {
+    border-color: var(--color-gray-600);
+  }
+  .border-b-transparent {
+    border-bottom-color: transparent;
   }
   .bg-gray-50 {
     background-color: var(--color-gray-50);
@@ -402,6 +470,12 @@
   .p-0\.5 {
     padding: calc(var(--spacing) * 0.5);
   }
+  .p-0\.25 {
+    padding: calc(var(--spacing) * 0.25);
+  }
+  .p-1 {
+    padding: calc(var(--spacing) * 1);
+  }
   .p-4 {
     padding: calc(var(--spacing) * 4);
   }
@@ -422,6 +496,9 @@
   }
   .py-10 {
     padding-block: calc(var(--spacing) * 10);
+  }
+  .pt-10 {
+    padding-top: calc(var(--spacing) * 10);
   }
   .pl-4 {
     padding-left: calc(var(--spacing) * 4);
@@ -483,6 +560,13 @@
   .filter {
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
   }
+  .hover\:bg-gray-200 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-gray-200);
+      }
+    }
+  }
 }
 @font-face {
   font-family: "Geist-mono";
@@ -495,13 +579,13 @@
 .bg-crossed {
   background-image: repeating-linear-gradient( -55deg, var(--color-gray-200) 0 2px, transparent 2px 8px );
 }
-#hoverable {
+.hoverable {
   position: relative;
 }
-#hoverable:hover #floating {
+.hoverable:hover .floating {
   display: flex;
 }
-#floating {
+.floating {
   position: absolute;
   top: calc(var(--spacing) * -2);
   left: calc(1/2 * 100%);
@@ -524,7 +608,33 @@
   --tw-shadow: 0 1px 2px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.05));
   box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
 }
-#link {
+.hoverable:hover .floating-right {
+  display: flex;
+}
+.floating-right {
+  position: absolute;
+  top: calc(1/2 * 100%);
+  right: calc(var(--spacing) * -2);
+  display: none;
+  width: fit-content;
+  --tw-translate-x: 100%;
+  --tw-translate-y: calc(calc(1/2 * 100%) * -1);
+  translate: var(--tw-translate-x) var(--tw-translate-y);
+  border-radius: var(--radius-lg);
+  border-style: var(--tw-border-style);
+  border-width: 1px;
+  border-color: var(--color-gray-200);
+  background-color: var(--color-white);
+  padding-inline: calc(var(--spacing) * 4);
+  padding-block: calc(var(--spacing) * 2);
+  font-size: var(--text-sm);
+  line-height: var(--tw-leading, var(--text-sm--line-height));
+  text-wrap: nowrap;
+  color: var(--color-gray-800);
+  --tw-shadow: 0 1px 2px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.05));
+  box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+}
+.link {
   text-decoration-line: underline;
   text-decoration-style: dotted;
 }
@@ -669,6 +779,11 @@
   syntax: "*";
   inherits: false;
   initial-value: 0 0 #0000;
+}
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
 }
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
