wallets page, worker and lots of changes

--- a/website/input.css
+++ b/website/input.css
@@ -10,6 +10,10 @@
     font-family: "Geist-mono";
 }
 
+/* html { */
+/*     font-size: 24px !important; */
+/* } */
+
 .bg-crossed {
     background-image: repeating-linear-gradient(
         -55deg,
